--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "gh": "^2.8.9",
+    "mongoose": "^8.5.3",
+    "nodemon": "^3.1.4",
     "react": "18.3.1",
-    "react-native": "0.75.1"
+    "react-native": "0.75.1",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
